@@ -18,7 +18,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.github.ben-manes.versions'
 apply plugin: 'io.fabric'
-apply from:'jacoco.gradle'
+apply from: 'jacoco.gradle'
 
 def appId = "com.makingiants.todayhistory"
 def appVersionName = "0.1.0"
@@ -31,6 +31,12 @@ def gitSha() {
 android {
   compileSdkVersion setup.targetSdk
   buildToolsVersion setup.buildTools
+
+  signingConfigs {
+    debug {
+      storeFile file("../debug.keystore")
+    }
+  }
 
   defaultConfig {
     applicationId appId
@@ -45,17 +51,18 @@ android {
     buildConfigField "String", "HOST", "\"http://day-in-history.herokuapp.com\""
     buildConfigField "String", "GIT_SHA", "\"STATIC_FOR_PERFORMANCE\""
     buildConfigField "boolean", "ANALYTICS_ENABLED", "false"
-
-    resValue "string", "ads_unit_id_banner", "${TODAY_ADS_UNIT_ID_BANNER}"
   }
   buildTypes {
     debug {
-      minifyEnabled false
+      minifyEnabled true
+      shrinkResources true
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
     release {
-      minifyEnabled false
+      minifyEnabled true
+      shrinkResources true
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+      signingConfig signingConfigs.debug
 
       buildConfigField "String", "GIT_SHA", "\"${gitSha()}\""
       buildConfigField "boolean", "ANALYTICS_ENABLED", "true"
@@ -66,17 +73,8 @@ android {
     prod
     mocked
   }
-  testOptions {
-    unitTests.all {
-      jvmArgs "-XX:MaxPermSize=2048m"
-
-      beforeTest { descriptor -> logger.lifecycle("Running test: " + descriptor)
-      }
-    }
-  }
 
   lintOptions {
-    fatal 'UnusedResources'
     abortOnError false
   }
 
@@ -98,7 +96,6 @@ dependencies {
   compile "com.android.support:design:$deps.supportLib"
   compile "com.android.support:cardview-v7:$deps.supportLib"
   compile "com.android.support:palette-v7:$deps.supportLib"
-  compile "com.google.android.gms:play-services-ads:${deps.playServices}"
   compile "org.jetbrains.kotlin:kotlin-stdlib:$deps.kotlin"
 
   compile project(':api')
